fixed image issue

--- a/profile/index.html
+++ b/profile/index.html
@@ -4,11 +4,11 @@
   <title>Joy Joseph Abisaab</title>
 
   <!-- Google fonts -->
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,500" rel="stylesheet">
 
   <!-- Fontawesome -->
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 
   <!-- Your style -->
@@ -18,7 +18,7 @@
 <body>
  <div class="container">
    <div class="card">
-    <img src="../images/joy.jpg" alt="Joy" width="300">
+    <img src="images/joy.jpg" alt="Joy" width="300">
     <h1>Joy Joseph Abisaab</h1>
     <h2> Artist of life</h2>
     <p>Developper, Artist, Photographer, Trader, Philosopher and Crossfitter</p>
@@ -39,7 +39,7 @@
       <tbody>
         <tr>
           <td>
-            <img src="../images/lordoftherings.jpg" alt="Lord of The Rings" width="200">
+            <img src="images/lordoftherings.jpg" alt="Lord of The Rings" width="200">
           </td>
           <td>
             <h3>Lord of the Rings</h3>
@@ -48,7 +48,7 @@
         </tr>
         <tr>
           <td>
-            <img src="../images/interstellar.jpg" alt="Interstallar" width="200">
+            <img src="images/interstellar.jpg" alt="Interstallar" width="200">
           </td>
           <td>
             <h3>Interstellar</h3>
@@ -57,7 +57,7 @@
         </tr>
         <tr>
           <td>
-            <img src="../images/starwars.jpg" alt="Starwars" width="200">
+            <img src="images/starwars.jpg" alt="Starwars" width="200">
           </td>
           <td>
             <h3>Starwars</h3>
