my profile page

--- a/index.html
+++ b/index.html
@@ -13,65 +13,92 @@
 
   <!-- Your style -->
   <link rel="stylesheet" href="style.css">
-  <script src="https://use.fontawesome.com/ee7d7b6048.js"></script>
 </head>
 <body>
- <div class="container">
-   <div class="card">
-    <img src="images/joy.jpg" alt="Joy" width="300">
-    <h1>Joy Joseph Abisaab</h1>
-    <h2> Artist of life</h2>
-    <p>Developper, Artist, Photographer, Trader, Philosopher and Crossfitter</p>
-  </div>
-  <div class="card">
-    <ul class="list-inline">
-      <li><i class="fa fa-instagram fa-2x" aria-hidden="true"></i><br>
-      <a href="https://www.instagram.com/jabisaab" target="_blank">Instagram</a></li>
-      <li><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i><br>
-      <a href="https://www.facebook.com/jabisaab" target="_blank">Facebook</a></li>
-      <li><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i><br>
-      <a href="http://www.twitter.com/jabisaab" target="_blank">Twitter</a></li>
+  <div id="sidebar">
+    <ul>
+      <li>
+        <a href="#summary">
+          <i class="fa fa-info-circle"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#favorite-movies">
+          <i class="fa fa-file-video-o"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#footer">
+          <i class="fa fa-life-ring"></i>
+        </a>
+      </li>
     </ul>
   </div>
-  <div class="card">
-    <h2> My Favourite Movies</h2>
-    <table>
-      <tbody>
-        <tr>
-          <td>
-            <img src="images/lordoftherings.jpg" alt="Lord of The Rings" width="200">
-          </td>
-          <td>
-            <h3>Lord of the Rings</h3>
-            <p>The lord of the rings trilogy, best magic sci-fi trilogy ever</p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <img src="images/interstellar.jpg" alt="Interstallar" width="200">
-          </td>
-          <td>
-            <h3>Interstellar</h3>
-            <p>It's not my favourite movie but Evans loves it and I was out of ideas on the spot</p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <img src="images/starwars.jpg" alt="Starwars" width="200">
-          </td>
-          <td>
-            <h3>Starwars</h3>
-            <p>Starwars, I mean no one can go wrong with that. Except Episode 1 which was really bad.</p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="card last">
-    <h2>About me</h2>
-    This page has been coded during the
-    <a href="http://lewagon.org/program" target="_blank">FullStack program @LeWagon</a>
-  </div>
-</div>
-</body>
-</html>
+  <div id="content">
+   <div class="container">
+     <div class="card">
+      <img src="images/joy.jpg" alt="Joy" width="300">
+      <div id="summary">
+        <h1>Joy Joseph Abisaab</h1>
+        <h2> Artist of life</h2>
+        <p>Developer, Artist, Photographer, Trader, Philosopher and Crossfitter</p>
+      </div>
+    </div>
+    <div class="card">
+      <ul class="list-inline">
+        <li><i class="fa fa-instagram fa-2x" aria-hidden="true"></i><br>
+          <a href="https://www.instagram.com/jabisaab" target="_blank">Instagram</a></li>
+          <li><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i><br>
+            <a href="https://www.facebook.com/jabisaab" target="_blank">Facebook</a></li>
+            <li><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i><br>
+              <a href="http://www.twitter.com/jabisaab" target="_blank">Twitter</a></li>
+            </ul>
+          </div>
+          <div class="card">
+            <div id="favorite-movies">
+              <h2> My Favourite Movies</h2>
+              <table>
+                <tbody>
+                  <tr>
+                    <td>
+                      <img src="images/lordoftherings.jpg" alt="Lord of The Rings" width="200">
+                    </td>
+                    <td>
+                      <h3>Lord of the Rings</h3>
+                      <p>The lord of the rings trilogy, best magic sci-fi trilogy ever</p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="images/interstellar.jpg" alt="Interstallar" width="200">
+                    </td>
+                    <td>
+                      <h3>Interstellar</h3>
+                      <p>It's not my favourite movie but Evans loves it and I was out of ideas on the spot</p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="images/starwars.jpg" alt="Starwars" width="200">
+                    </td>
+                    <td>
+                      <h3>Starwars</h3>
+                      <p>Starwars, I mean no one can go wrong with that. Except Episode 1 which was really bad.</p>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="card last">
+          <div id="footer">
+              <h2>About me</h2>
+              This page has been coded during the
+              <a href="http://lewagon.org/program" target="_blank">FullStack program @LeWagon</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </body>
+    </html>
+
